# cell_search_app

./: .bmv-post-commit.sh  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  LICENSE  README.Docker.md  README.md  compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: mkdocs_publish.yml  python-package.yml
authentication/: index.html
configuration/: index.html
docs/: authentication.md  configuration.md  index.md  installation.md  quickstart.md  troubleshooting.md
installation/: index.html
quickstart/: index.html
scripts/: Cell_Search_App.py
src/cell_search/: __init__.py  app.py  cli.py  config.py  data_access.py  utils.py
src/cell_search/assets/: dash_style.css
src/cell_search/callbacks/: __init__.py  navigation.py  search.py
src/cell_search/services/: __init__.py  cell_lookup.py  neighbor_search.py  neuroglancer.py
tests/: test_app_factory.py  test_callbacks_registration.py  test_cell_lookup_service.py  test_config.py  test_data_access.py  test_neighbor_search_service.py  test_neuroglancer_service.py  test_utils_baseline.py
troubleshooting/: index.html
