[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[project]
name = "cell_search"
version = "0.0.1"
description = "A library for a cell search app that helps users find similar cells in an embedding based on a growing suite of feature sets."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["cell-search", "neuroscience", "embedding", "dash", "visualization"]
dependencies = [
    "caveclient>=8.0.1",
    "chardet<6",
    "cloud-volume>=12.12.1",
    "dash>=4.0.0",
    "imageryclient>=1.0.4",
    "matplotlib>=3.10.8",
    "nglui>=4.7.1",
    "pandas>=2.3.3",
    "pyperclip>=1.11.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "dash-connectivity-viewer",
]
authors = [
    { name = "Leila Elabbady", email = "leila.elabbady@alleninstitute.org" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.urls]
Homepage = "https://github.com/lelabbady/cell_search_app"
Repository = "https://github.com/lelabbady/cell_search_app"
Documentation = "https://lelabbady.github.io/cell_search/"
Issues = "https://github.com/lelabbady/cell_search_app/issues"

[project.scripts]
cell-search = "cell_search.cli:main"

[dependency-groups]
dev = [
    "ipykernel",
    "pytest",
    "pytest-cov",
    "bump-my-version",
]
lint = [
    "ruff",
]
profile = [
    "scalene",
    "pyinstrument",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.uv]
exclude-newer = "14 days"
default-groups = [
    "dev",
    "lint",
    "profile",
    "docs",
]

[tool.uv.sources]
dash-connectivity-viewer = { git = "https://github.com/CAVEconnectome/dash-connectivity-viewer.git", rev = "1ccac10" }

[tool.bumpversion]
current_version = "0.0.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "v{new_version}"
commit_args = ""
pre_commit_hooks = ['uv sync', 'git add uv.lock']
post_commit_hooks = ["./.bmv-post-commit.sh"]

[[tool.bumpversion.files]]
filename = "src/cell_search/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

# Ruff configuration - minimal rules to start
# See https://docs.astral.sh/ruff/rules/ for available rules
# Common additions: select = ["E", "F", "I"] for errors, pyflakes, and isort
[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select=["E9","F63","F7","F82"]  # Minimal: syntax errors and undefined names

[tool.poe.tasks.drybump]
cmd = "uv run bump-my-version bump --dry-run --verbose"
help = "Dry run of version bump for the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.bump]
cmd = "uv run bump-my-version bump"
help = "Bump the version number in the project. Use with 'patch', 'minor', or 'major' to specify the version change."

[tool.poe.tasks.test]
cmd = "uv run pytest --cov=cell_search tests"
help = "Run pytest with code coverage."

[tool.poe.tasks.lint]
cmd = "uv run ruff check src/ tests/"
help = "Run ruff checks."

[tool.poe.tasks.build]
cmd = "uv build"
help = "Build wheel and source distribution."

[tool.poe.tasks.pre-release]
cmd = "poe test && poe lint && poe build"
help = "Run validation checks before publishing."

[tool.poe.tasks.doc-preview]
cmd = "uv run mkdocs serve"
help = "Preview documentation build locally"

[tool.poe.tasks.profile-all]
cmd = "uv run scalene"
help = "Profile cpu and memory of task with scalene"

[tool.poe.tasks.profile]
cmd = "uv run pyinstrument -r html"
help = "Profile cpu of task with pyinstrument"

[tool.poe.tasks.lab]
cmd = "uv run --with jupyterlab --with jupyterlab-code-formatter --with jupyter-resource-usage --with jupyterlab-execute-time --with catppuccin-jupyterlab --with ipywidgets jupyter lab --no-browser"
help = "Start Jupyter Lab"

[tool.poe.tasks.scratch-lab]
cwd = "scratch"
cmd = "uv run --with jupyterlab --with jupyterlab-code-formatter --with jupyter-resource-usage --with jupyterlab-execute-time --with catppuccin-jupyterlab --with ipywidgets jupyter lab --no-browser"
help = "Start Jupyter Lab"

